# lpic

./: AUTHORS  CHANGES  COPYING  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  lpic.el
config/: Makefile.in
data/: domain-1  energy-1  error-1  flux-1  lpic.steps  output.lpi  pulse#1  reflex-1  times-1  trace-1-1
fresnel/: Makefile.am  Makefile.in  README  common.h  error.C  error.h  main.C  main.h  parameter.C  parameter.h  propagate.C  propagate.h  uhr.C  uhr.h  utilities.C  utilities.h
fresnel/data/: error  output.fresnel  reflex  reflex-avg  reflex-int
idl/: ex_color  idl.body  idl22ps_de.pro  idl2ps.body  idl2ps_de_grey.pro  idl4ps.pro  idl_grey_table.pro  idl_inverted_grey_table.pro  idlmovie.body  idlmovie.pro  idlmovie2.pro  idlmovie3.pro  idlphase.pro  idlplot.pro  idlplot2ps.pro  ipp_examples.pro  scale-idl  single.pro  single2ps.pro  singleps.pro  start_ex
lpic/: Makefile.am  Makefile.in  input.lpic
lpic/input/: input.2omegap.1  input.2omegap.2  input.diagnostics  input.fresnel.25p  input.fresnel.25p_fine  input.fresnel.25s  input.fresnel.30p  input.fresnel.30p_fine  input.fresnel.30s  input.fresnel.37s  input.harmonics.1  input.harmonics.10  input.harmonics.3  input.harmonics.4  input.harmonics.5  input.harmonics.6  input.harmonics.7  input.harmonics.8  input.harmonics.9  input.harmonics.matching  input.harmonics.matching~  input.list  input.mcc  input.positron  input.pulse  input.reflection
lpic/src/: Makefile.am  Makefile.in  Makefile.old  box.C  box.h  cell.h  common.h  debug.h  diagnostic.C  diagnostic.h  diagnostic_energy.C  diagnostic_energy.h  diagnostic_flux.C  diagnostic_flux.h  diagnostic_phasespace.C  diagnostic_phasespace.h  diagnostic_poisson.C  diagnostic_poisson.h  diagnostic_reflex.C  diagnostic_reflex.h  diagnostic_snapshot.C  diagnostic_snapshot.h  diagnostic_spacetime.C  diagnostic_spacetime.h  diagnostic_stepper.C  diagnostic_stepper.h  diagnostic_trace.C  diagnostic_trace.h  diagnostic_velocity.C  diagnostic_velocity.h  domain.C  domain.h  error.C  error.h  main.C  main.h  matrix.C  matrix.h  network.C  network.h  (+19 more)
post/: Makefile.am  Makefile.in  input.post  lpic.post
post/input/: input.post.fresnel0
post/src/: Makefile.am  Makefile.in  Makefile.old  common.h  error.C  error.h  ft.C  ft.h  ft2d.C  ft2d.h  main.C  main.h  matrix.h  parameter.C  parameter.h  phasespace.C  phasespace.h  readfile.C  readfile.h  spacetime.C  spacetime.h  trace.C  trace.h  utilities.C  utilities.h
