bin_PROGRAMS = postprocessor

#INCLUDES =
#LDFLAGS = 

dist_data_DATA = Makefile.old

postprocessor_SOURCES = \
	main.C \
	error.C \
	parameter.C \
	readfile.C \
	ft.C \
	ft2d.C \
	spacetime.C \
	trace.C \
	phasespace.C \
	utilities.C

include_HEADERS = \
	common.h \
	error.h \
	ft.h \
	ft2d.h \
	main.h \
	matrix.h \
	parameter.h \
	phasespace.h \
	readfile.h \
	spacetime.h \
	trace.h \
	utilities.h
